--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -132,8 +132,8 @@ android {
         applicationId "com.eduardosanchez.addit"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 4 // Settings Menu
-        versionName "1.2.1"
+        versionCode 5 // Game Logic Enhanced
+        versionName "1.2.2"
     }
     splits {
         abi {
