--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/picker": "^1.6.1",
     "@react-navigation/drawer": "^5.8.1",
     "@react-navigation/native": "^5.4.2",
     "@react-navigation/stack": "^5.3.9",
@@ -20,7 +21,9 @@
     "react-native-circular-progress": "^1.3.6",
     "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "^1.6.1",
-    "react-native-progress-wheel": "^1.0.5",
+    "react-native-numeric-input": "^1.8.3",
+    "react-native-popup-menu": "^0.15.7",
+    "react-native-progress-wheel": "^1.0.4",
     "react-native-reanimated": "^1.9.0",
     "react-native-redash": "^14.1.1",
     "react-native-safe-area-context": "^1.0.2",
