--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/drawer": "^5.8.1",
     "@react-navigation/native": "^5.4.2",
     "@react-navigation/stack": "^5.3.9",
+    "lodash.isequal": "^4.5.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-circular-progress": "^1.3.6",
