--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,6 +67,18 @@ def enableProguardInReleaseBuilds = false
  * this variant is about 6MiB larger per architecture than default.
  */
 def jscFlavor = 'org.webkit:android-jsc:+'
+Properties properties = new Properties()
+
+if (project.rootProject.file('local.properties').exists()) {
+    properties.load(project.rootProject.file('local.properties').newDataInputStream())
+} else {
+    properties.load(project.rootProject.file('default.properties').newDataInputStream())
+}
+
+def cert_location = properties.getProperty('CERTIFICATE')
+def key_alias = properties.getProperty('KEY_ALIAS')
+def store_password = properties.getProperty('STORE_PASSWORD')
+def key_password = properties.getProperty('KEY_PASSWORD')
 
 android {
     ndkVersion rootProject.ext.ndkVersion
@@ -83,10 +95,10 @@ android {
     }
     signingConfigs {
         debug {
-            storeFile file('debug.keystore')
-            storePassword 'android'
-            keyAlias 'androiddebugkey'
-            keyPassword 'android'
+            storeFile file(cert_location)
+            storePassword store_password
+            keyAlias key_alias
+            keyPassword key_password
         }
     }
     buildTypes {
