--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.22.1",
-    "react-native-svg": "^13.10.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-svg": "^13.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -45,6 +44,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.7",
     "prettier": "^2.4.1",
+    "react-native-vector-icons": "^10.0.0",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
